--- a/app/src/main/res/layout/user_list_layout.xml
+++ b/app/src/main/res/layout/user_list_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <!--사용자 이름을 보여주는 TextView-->
@@ -9,6 +9,8 @@
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:textSize="30sp"/>
 
     <!--사용자를 구분해주는 선-->
@@ -16,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/user_name"
+        android:layout_marginTop="5dp"
         android:background="@color/black"/>
 
 </RelativeLayout>
