--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:icon="@drawable/btn_background"
-        android:text="간편"
+        android:text="간편채팅"
         android:layout_above="@id/input_layout"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
@@ -33,25 +33,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:weightSum="100">
+        android:orientation="horizontal">
         <Button
             android:id="@+id/_btn"
-            android:layout_width="20dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
+            android:layout_weight="1"
             android:text="+"/>
         <EditText
             android:id="@+id/message_edit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="80"
+            android:layout_weight="8"
             android:hint="메세지를 입력하세요"/>
         <Button
             android:id="@+id/send_btn"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
+            android:layout_weight="2"
             android:text="전송"/>
     </LinearLayout>
 
