--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,28 +7,110 @@
     android:padding="20dp"
     >
 
-    <EditText
-        android:id="@+id/edit_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="name"/>
+
     <EditText
         android:id="@+id/edit_email"
+        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="email"/>
+        android:hint="이메일"/>
     <EditText
         android:id="@+id/edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"/>
+        android:hint="비밀번호"/>
+    <EditText
+        android:id="@+id/edit_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="이름"/>
+    <EditText
+        android:id="@+id/edit_nick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="별명"/>
+    <EditText
+        android:id="@+id/edit_age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="나이"/>
+    <Button
+        android:id="@+id/edit_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="이미지 업로드"/>
+
+
+    <RadioGroup
+        android:id="@+id/edit_gender"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="성별"/>
+        <RadioButton
+            android:id="@+id/edit_male"
+            android:text="남성"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <RadioButton
+            android:id="@+id/edit_female"
+            android:text="여성"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </RadioGroup>
+    <EditText
+        android:id="@+id/edit_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="지역"/>
+    <EditText
+        android:id="@+id/edit_number"
+        android:inputType="phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="전화번호"/>
+    <TableLayout
+        android:id="@+id/edit_interest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TableRow>
+            <CheckBox
+                android:id="@+id/interest1"
+                android:text="관심사1"/>
+            <CheckBox
+                android:id="@+id/interest2"
+                android:text="관심사2"/>
+            <CheckBox
+                android:id="@+id/interest3"
+                android:text="관심사3"/>
+            <CheckBox
+                android:id="@+id/interest4"
+                android:text="관심사4"/>
+        </TableRow>
+        <TableRow>
+            <CheckBox
+                android:id="@+id/interest5"
+                android:text="관심사5"/>
+            <CheckBox
+                android:id="@+id/interest6"
+                android:text="관심사6"/>
+            <CheckBox
+                android:id="@+id/interest7"
+                android:text="관심사7"/>
+            <CheckBox
+                android:id="@+id/interest8"
+                android:text="관심사8"/>
+        </TableRow>
+    </TableLayout>
     <Button
         android:id="@+id/btn_signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="회원가입"/>
-
-
-
 </LinearLayout>
+
+
