--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,6 +8,13 @@
     >
 
 
+    <ImageView
+        android:id="@+id/userImageView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_user"
+        android:layout_gravity="center" />
     <EditText
         android:id="@+id/edit_email"
         android:inputType="textEmailAddress"
@@ -34,11 +41,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="나이"/>
-    <Button
-        android:id="@+id/edit_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="이미지 업로드"/>
 
 
     <RadioGroup
