--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -8,9 +9,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/btn_receiver_background"
         android:layout_margin="5dp"
         android:padding="10dp"
         android:text="받는 메세지"
         android:textSize="20sp"/>
+    <TextView
+        android:id="@+id/receive_message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="시간"
+        android:layout_toRightOf="@id/receive_message_text"
+        android:layout_alignBottom="@id/receive_message_text"/>
 </RelativeLayout>
