--- a/app/src/main/res/layout/send.xml
+++ b/app/src/main/res/layout/send.xml
@@ -8,9 +8,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/btn_sender_background"
         android:layout_margin="5dp"
         android:padding="10dp"
         android:text="보내는 메세지"
         android:textSize="20sp"/>
+    <TextView
+        android:id="@+id/send_message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="시간"
+        android:layout_toLeftOf="@id/send_message_text"
+        android:layout_alignBottom="@id/send_message_text"/>
 </RelativeLayout>
