--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,107 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 회원가입 화면 xml -->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    >
+    android:padding="20dp">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/userImageView"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/icon_user"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"/>
+            <EditText
+                android:id="@+id/edit_email"
+                android:inputType="textEmailAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="이메일"/>
+            <EditText
+                android:id="@+id/edit_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="비밀번호"/>
+            <EditText
+                android:id="@+id/edit_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="이름"/>
+            <EditText
+                android:id="@+id/edit_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="나이"/>
+            <EditText
+                android:id="@+id/edit_introduction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="상태메세지 작성"/>
 
-    <ImageView
-        android:id="@+id/userImageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/icon_user"
-        android:layout_gravity="center" />
-    <EditText
-        android:id="@+id/edit_email"
-        android:inputType="textEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="이메일"/>
-    <EditText
-        android:id="@+id/edit_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="비밀번호"/>
-    <EditText
-        android:id="@+id/edit_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="이름"/>
-    <EditText
-        android:id="@+id/edit_age"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="나이"/>
+            <RadioGroup
+                android:id="@+id/edit_gender"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="💜성별"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_marginRight="5dp"/>
+                <RadioButton
+                    android:id="@+id/edit_male"
+                    android:text="남성"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <RadioButton
+                    android:id="@+id/edit_female"
+                    android:text="여성"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </RadioGroup>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="15dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="💜지역"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_marginRight="5dp"/>
+                <Spinner
+                    android:id="@+id/spinner_area"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
-    <RadioGroup
-        android:id="@+id/edit_gender"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="성별"/>
-        <RadioButton
-            android:id="@+id/edit_male"
-            android:text="남성"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <RadioButton
-            android:id="@+id/edit_female"
-            android:text="여성"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </RadioGroup>
-    <EditText
-        android:id="@+id/edit_area"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="지역"/>
-    <TableLayout
-        android:id="@+id/edit_interest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TableRow>
-            <CheckBox
-                android:id="@+id/interest1"
-                android:text="관심사1"/>
-            <CheckBox
-                android:id="@+id/interest2"
-                android:text="관심사2"/>
-            <CheckBox
-                android:id="@+id/interest3"
-                android:text="관심사3"/>
-            <CheckBox
-                android:id="@+id/interest4"
-                android:text="관심사4"/>
-        </TableRow>
-        <TableRow>
-            <CheckBox
-                android:id="@+id/interest5"
-                android:text="관심사5"/>
-            <CheckBox
-                android:id="@+id/interest6"
-                android:text="관심사6"/>
-            <CheckBox
-                android:id="@+id/interest7"
-                android:text="관심사7"/>
-            <CheckBox
-                android:id="@+id/interest8"
-                android:text="관심사8"/>
-        </TableRow>
-    </TableLayout>
-    <Button
-        android:id="@+id/btn_signUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="회원가입"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="💜MBTI"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+            <TableLayout
+                android:id="@+id/edit_mbti"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
+                <TableRow>
+                    <CheckBox
+                        android:id="@+id/mbti1"
+                        android:text="ISTJ"/>
+                    <CheckBox
+                        android:id="@+id/mbti2"
+                        android:text="ISFJ"/>
+                    <CheckBox
+                        android:id="@+id/mbti3"
+                        android:text="INFJ"/>
+                    <CheckBox
+                        android:id="@+id/mbti4"
+                        android:text="INTJ"/>
+                </TableRow>
+                <TableRow>
+                    <CheckBox
+                        android:id="@+id/mbti5"
+                        android:text="ISTP"/>
+                    <CheckBox
+                        android:id="@+id/mbti6"
+                        android:text="ISFP"/>
+                    <CheckBox
+                        android:id="@+id/mbti7"
+                        android:text="INFP"/>
+                    <CheckBox
+                        android:id="@+id/mbti8"
+                        android:text="INTP"/>
+                </TableRow>
+                <TableRow>
+                    <CheckBox
+                        android:id="@+id/mbti9"
+                        android:text="ESTP"/>
+                    <CheckBox
+                        android:id="@+id/mbti10"
+                        android:text="ESFP"/>
+                    <CheckBox
+                        android:id="@+id/mbti11"
+                        android:text="ENFP"/>
+                    <CheckBox
+                        android:id="@+id/mbti12"
+                        android:text="ENTP"/>
+                </TableRow>
+                <TableRow>
+                    <CheckBox
+                        android:id="@+id/mbti13"
+                        android:text="ESTJ"/>
+                    <CheckBox
+                        android:id="@+id/mbti14"
+                        android:text="ESFJ"/>
+                    <CheckBox
+                        android:id="@+id/mbti15"
+                        android:text="ENFJ"/>
+                    <CheckBox
+                        android:id="@+id/mbti16"
+                        android:text="ENTJ"/>
+                </TableRow>
+            </TableLayout>
+
+            <Button
+                android:id="@+id/btn_signUp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="회원가입"
+                android:textSize="15sp"/>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
 
 
