--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FFF7CAC9</color>
+    <color name="blue">#B4E0F4</color>
     <color name="sendMessage">#CDFAE0E0</color>
     <color name="receiveMessage">#E4E4E4</color>
     <color name="fab">#F2EBFF</color>
