--- a/app/src/main/res/layout/item_simple_chat_data.xml
+++ b/app/src/main/res/layout/item_simple_chat_data.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 간편채팅 데이터들의 리사이클러뷰 출력 형태 결정 -->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FragmentChatList">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chat_recyclerView"
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/item_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem=""
-        />
+        android:layout_margin="10dp"
+        android:textColor="@color/textColor"/>
 
 </LinearLayout>
