--- a/app/src/main/res/layout/fragment_text_replace.xml
+++ b/app/src/main/res/layout/fragment_text_replace.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentChatList">
+    tools:context=".FragmentTextReplace">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chat_recyclerView"
+        android:id="@+id/textReplaceRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem=""
-        />
+        tools:listitem="@layout/item_simple_chat_data"/>
 
 </LinearLayout>
