--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -10,6 +10,6 @@
         android:id="@+id/user_recycelrView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/user_list_layout" />
+        tools:listitem="@layout/item_userlist" />
 
 </LinearLayout>
