회원가입 오류 수정, 특수문자 프래그먼트 추가

--- a/app/src/main/res/layout/fragment_chat_room_list.xml
+++ b/app/src/main/res/layout/fragment_chat_room_list.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentChatList">
+    tools:context=".FragmentChatRoomList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem=""
+        android:visibility="visible"
         />
 
 </LinearLayout>
