--- a/app/src/main/res/layout/item_chatroomlist.xml
+++ b/app/src/main/res/layout/item_chatroomlist.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 채팅방 목록 리사이클러뷰 출력 형태 결정 -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -32,15 +34,6 @@
             android:textStyle="bold"
             android:textColor="@color/textColor"
             android:layout_marginRight="5dp"/>
-        <TextView
-            android:id="@+id/lastMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="마지막 메시지"
-            android:textSize="13dp"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textColor="@color/textColor"/>
     </LinearLayout>
 
 
