--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -50,7 +50,8 @@
         android:layout_above="@id/fabSimpleChat"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/fab"
+        android:backgroundTint="@color/pink"
+        app:borderWidth="0dp"
         android:textColor="#7A7A7A"
         android:src="@android:drawable/ic_input_add" />
 
@@ -61,32 +62,37 @@
         android:layout_above="@id/input_layout"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/fab"
         android:text="간편채팅"
-        android:textColor="#7A7A7A"
+        android:backgroundTint="@color/pink"
         app:icon="@drawable/icon_chat" />
 
     <LinearLayout
         android:id="@+id/input_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
+        android:background="@drawable/login_border"
+        android:paddingStart="20dp"
+        android:drawablePadding="10dp"
+        android:paddingEnd="20dp"
         android:gravity="center">
         <EditText
             android:id="@+id/message_edit"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="9"
+            android:paddingStart="20dp"
+            android:background="@android:color/transparent"
             android:hint="메세지를 입력하세요"/>
         <ImageButton
             android:id="@+id/send_btn"
             android:layout_width="0dp"
             android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:background="@drawable/icon_send_btn"
-            android:scaleType="fitCenter"
-            />
+            android:background="@drawable/send_btn"
+            android:scaleType="fitCenter" />
     </LinearLayout>
 
 </RelativeLayout>
