--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+        <RelativeLayout
+            android:id="@+id/layout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/white"
+            android:padding="5dp">
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/logo_77"/>
+                <ImageButton
+                    android:id="@+id/btnLogout"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/icon_menu"
+                    android:scaleType="matrix"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+        </RelativeLayout>
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/layout"
             android:layout_above="@id/tabLayout"
             />
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            app:tabIndicatorColor="@color/pink"
+            app:tabRippleColor="@color/pink">
         </com.google.android.material.tabs.TabLayout>
 
 
