--- a/app/src/main/res/layout/item_chatroomlist.xml
+++ b/app/src/main/res/layout/item_chatroomlist.xml
@@ -34,6 +34,15 @@
             android:textStyle="bold"
             android:textColor="@color/textColor"
             android:layout_marginRight="5dp"/>
+        <TextView
+            android:id="@+id/user_last_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="마지막 메시지"
+            android:textSize="13dp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textColor="@color/textColor"/>
     </LinearLayout>
 
 
