--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -9,21 +9,24 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
         <TextView
             android:id="@+id/commentName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이름"
             android:textColor="@color/textColor"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
-        <Button
+        <ImageButton
             android:id="@+id/btnCommentRemove"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:src="@drawable/icon_remove"
+            android:background="@color/white"
+            android:visibility="visible"
             android:text="삭제"/>
     </RelativeLayout>
 
@@ -42,7 +45,7 @@
         android:layout_height="wrap_content"
         android:text="시간"
         android:textColor="@color/textColor"
-        android:textSize="15sp" />
+        android:textSize="12sp" />
 
     <!--사용자를 구분해주는 선-->
     <View
