간챗 프래그먼트에 개인DB 카테고리 추가, 간챗DB 중복삽입 방지

--- a/app/src/main/res/layout/activity_balance_game.xml
+++ b/app/src/main/res/layout/activity_balance_game.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".BalanceGameActivity">
 
     <!-- 밸런스 게임 관련 부분 -->
@@ -13,6 +12,7 @@
         android:id="@+id/voteLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:orientation="vertical">
         <!-- 게시자 사진, 이름, 게시물 작성시간 -->
         <RelativeLayout
@@ -182,7 +182,7 @@
     <LinearLayout
         android:id="@+id/editLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
         <EditText
