--- a/app/src/main/res/layout/activity_data_add.xml
+++ b/app/src/main/res/layout/activity_data_add.xml
@@ -1,37 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="15dp"
     tools:context=".DataAddActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="💗 카테고리를 선택하세요."
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="5dp"/>
-    <Spinner
-        android:id="@+id/spinner_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="😎 추가할 데이터를 입력하세요."
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-    <!--여기에 스피너로 카테고리 추가해야 할듯함-->
-    <EditText
-        android:id="@+id/editAdd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="내용"/>
+        android:orientation="vertical"
+        android:layout_alignParentTop="true">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="💗 카테고리를 선택하세요."
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="5dp"/>
+        <Spinner
+            android:id="@+id/spinner_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="😎 추가할 데이터를 입력하세요."
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+        <!--여기에 스피너로 카테고리 추가해야 할듯함-->
+        <EditText
+            android:id="@+id/editAdd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="내용"/>
+    </LinearLayout>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_data_add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/sendMessage"
+        android:text="추가하기"
+        android:textStyle="bold"
+        android:textColor="@color/textColor"
+        android:textSize="15sp"
+        android:layout_alignParentBottom="true"/>
+
+
+</RelativeLayout>
